--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,1 +1,34 @@
+name: Upload Python Package to PyPI
 
+on:
+  push:
+    branches:
+      - main  # 你可以设置为其他分支，例如 'master'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'  # 你可以根据需要更改 Python 版本
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+
+    - name: Build the distribution
+      run: |
+        python setup.py sdist bdist_wheel
+
+    - name: Upload to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.0.2
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
